# DVMC: DVM Client-VM Connector API.
# Copyright 2022 blastdoor7
# Licensed under the Apache License, Version 2.0.

[package]
name = "dvmc-declare-tests"
version = "10.0.0-alpha.5"
authors = ["Jake Lang <jak3lang@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/blastdoor7/dvmc"
description = "Bindings to DVMC (VM declare macro) -- Test crate"
edition = "2018"
publish = false

[dependencies]
dvmc-declare = { path = "../dvmc-declare" }
dvmc-sys = { path = "../dvmc-sys" }
dvmc-vm = { path = "../dvmc-vm" }
